deploy/market/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-api
spec:
  selector:
    app.kubernetes.io/name: market-api
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
